--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,10 @@
                 "node_modules/*",
                 "src/types/*"
             ]
-        }
+        },
+        "lib": [
+            "ES2021.String"
+        ]
     },
     "include": [
         "./src/**/*"
