feat: remove pre-commit

--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "src/index.js",
   "scripts": {
     "start": "nodemon src/index.ts",
-    "dist:start": "node dist/index.js",
     "build": "rimraf dist && tsc",
     "ts.check": "tsc --project tsconfig.json",
     "add-build": "git add dist",
@@ -14,9 +13,7 @@
   "author": "",
   "license": "ISC",
   "pre-commit": [
-    "ts.check",
-    "build",
-    "add-build"
+    "ts.check"
   ],
   "dependencies": {
     "cors": "2.8.5",
